--- a/src/coverletter.tex
+++ b/src/coverletter.tex
@@ -29,7 +29,7 @@
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-skyblue}
 % Uncomment if you would like to specify your own color
 % \definecolor{awesome}{HTML}{CA63A8}
 
@@ -53,15 +53,15 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 \photo[circle,noedge,left]{./src/profile}
-\name{Claud D.}{Park}
-\position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\name{Ingrid}{Schulz}
+\position{Android Developer}
+\address{Loewenhardtdamm 8, 12101 Berlin, Germany}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{(+49) 176-20324492}
+\email{fr.ingrid.schulz@gmail.com}
+\bitbucket{Lilim}
+\linkedin{ingrid-schulz-43b674138}
+\xing{Ingrid\_Schulz22}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -73,7 +73,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``Be the change that you want to see in the world."}
+%\quote{``Be the change that you want to see in the world."}
 
 
 %-------------------------------------------------------------------------------
@@ -83,17 +83,17 @@
 % The company being applied to
 \recipient
   {Company Recruitment Team}
-  {Google Inc.\\1600 Amphitheatre Parkway\\Mountain View, CA 94043}
+  {Zalando SE\\Valeska-Gert-Straße 5\\10243 Berlin}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Software Engineer}
+\lettertitle{Job Application for Android Developer}
 % How the letter is opened
-\letteropening{Dear Mr./Ms./Dr. LastName,}
+\letteropening{Dear Ms. Bettencourt,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
-\letterenclosure[Attached]{Curriculum Vitae}
+%\letterenclosure[Attached]{Curriculum Vitae}
 
 
 %-------------------------------------------------------------------------------
@@ -119,19 +119,15 @@
 \begin{cvletter}
 
 \lettersection{About Me}
-In 2014 after 6 years of web development I wanted to lern something new and interesting and so I started to learn Android development. Mostly on private projects for friends or for fun but at a short amount of time I was able to bugfix the wetter.com weather app. After two years of Project Management my frustration of coming up with ideas, planning them but never being allowed to develop them by myself grew. So I quit my job and started working as a full time Android developer. 
-On of the things I learned from my last position is the continuous search for a way to improve an app but keeping the company needs in mind.
-When I started my current job I took over the previous app and after a few months I finally convinced my supervisor to start the app again from scratch. This was a great opportunity for me to upgrade the app architecture e.g. using the Master Detail Flow, getting rid of deprecated code and using the latest Android API version. In order to get everything work smoothly I worked closely together with the image recognition and the backend team.
-After the project manager and the last remaining iOS developer left in 2018 I took over the responsibility for the whole mobile department. To develop tech demos for upcoming sales pitches I worked closely together with a freelancer. During that time I learned a few bits of Swift to be able to do quick bugfixes.
-Last year I also started learning Kotlin to improve my Android skills and did some private apps to practice. The far most developed app of them is a schedule for the 35C3. I went to the congress and was annoyed of the performance of the official app so I started to work on an alternative. It is not feature complete because of that it is not on the store right now.
+In 2013 after 6 years of web development, I started to learn Java to develop Android apps. Soon I was able to apply these skills in my job and switched to the mobile department of wetter.com. I was mainly fixing bugs before I was assigned to the Android project management to overview the redevelopment of the weather app. In the following two years I contributed my ideas, planned features and did user surveys and Quality Assurance to improve the app.\\
+To be a programmer again, I changed my career path and started working as a full time Android developer in a Startup in Berlin. I maintained the previous app and because the structure did not meet the requirements of a contemporary app, I suggested rewriting the app. It was acknowledged which gave me the opportunity to upgrade the app architecture and getting rid of deprecated code.\\
+In 2018 I was given responsibility for the mobile department. I managed and coordinated the development of tech demos inside the company as well as with freelancers.I began learning Kotlin on private projects to improve my Android skills. The most developed app is a schedule for the 35C3 (IT Congress in Leipzig). The official app has potential for performance improvements why I started working on an alternative. The app is not feature complete yet but the code is available in my repository in bitbucket.
 
 \lettersection{Why Zalando?}
-Zalando is for me a pefect place to contribute my skills and knowledge. Online shopping especially for clothes is an important part of our lives today. I deeply understand the importance of an easy to use and fast app to create a pleasant experience for users. Working close together with other developers on an app that is used and enjoyed by millions of people is one of my main goals.
+Zalando is the perfect place for me. Online shopping, especially for fashion, is an important part of people’s everyday life from all walks of life. A deep understanding of the importance of a fast and intuitive use of an app is needed. I put a strong emphasis on the connection between these core qualities and a pleasant experience for users. One thing that drives me is to share my ideas with my team and contribute my skills and knowledge to the success of the company. Zalando already has a great app which is enjoyed by millions of people. To maintain this status or even increase this is an exciting challenge which I enjoy taking up.
 
 \lettersection{Why Me?}
-I'm a passionate developer with lots of experience in different fields and a high willingness to lern new and improve my existing skills. I always keep the customers in mind while working on an app to get a balance between customer satisfaction and company success. 
-I have a long endurance and everything I do not know yet I am very happy to learn.
-
+I'm a passionate developer with lots of experience in different fields and a high willingness to learn new skills and improve my existing skill set. I always keep the customers in mind while working on an app to create a balance between customer satisfaction and the company’s needs. With my long history of improvement and am aware that one will never know everything. I am very patient and eager to close my own knowledge gaps while sharing my own knowledge and offering my help.
 \end{cvletter}
 
 
