--- a/src/cv/summary.tex
+++ b/src/cv/summary.tex
@@ -3,14 +3,13 @@
 %-------------------------------------------------------------------------------
 \cvsection{Summary}
 
-
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-I am a passionate developer with a wide range of interests and over 10 years of professional experience in various fields and technologies. Android is an interesting field for me and I enjoy to develop apps professionally and self-reliant. 
+I am a passionate developer with a wide range of interests and over 10 years of professional experience in various fields and technologies. Android is outstanding because being able to develop apps on my own for every issue possible is an awesome feeling.
 
 In order to keep a positive work-life balance I do sports like Zumba or Bouldering and crafts.
 \end{cvparagraph}
