--- a/src/cv/presentation.tex
+++ b/src/cv/presentation.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Released app}
+\cvsection{Apps}
 
 
 %-------------------------------------------------------------------------------
